# twidder

./: .gitignore  database.db  flake.nix  pyproject.toml  start.py  start.sh
.direnv/: flake-profile-8-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 30gb0fm18qd403x0clsysxs56g3baa51-source  5c9mlv8jgnnl3zmh78ky0hq3rkidhzmk-source  cwyarr64v1j9j08c0zv7xbsm3az0h9ns-source  g6596409v5vww0qf81mnxj6ja04pplaw-source  g6zgrp6q5slf6vg6yq5xv023nv61nl4p-source
twidder/: __init__.py  views.py
twidder/backend/: database_helper.py  lib.py  routes.py  schema.sql
twidder/static/: client.css  client.html  client.js  profile.css  profile.js  server.js  socketclient.js  welcome.css  welcome.js
twidder/websocket/: __init__.py  lib.py  routes.py  server_socket.py
