[project]
name = "twidder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "gunicorn>=23.0",
    "bcrypt>=3.1",
    "bcrypt>=4.1",
    "flask-sock>=0.7",
]

[project.scripts]
serve = "start:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
